Reset GPX file. Fix download z-index
Fixes #13

--- a/cyclewithme.css
+++ b/cyclewithme.css
@@ -32,7 +32,7 @@ a.withdraw {
     position: absolute;
     bottom: 0;
     right: 15px;
-    z-index: 100000;
+    z-index: 3;
 }
 
 
